adding all user role and user settings features

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="w-full min-h-screen  bg-blue-950 bg-opacity-100">
-  <app-header>    </app-header>
+  <app-header></app-header>
   <app-sidebar></app-sidebar>
-  <div id="container-main-1" class="p-4 sm:ml-48 dark:bg-gray-900">
+  <div id="container-main-1" class="p-4 md:ml-48 dark:bg-gray-900">
     <div id="container-main-2" class="p-4 border-2 border-gray-400 border-dashed rounded-lg dark:border-gray-700">
       <router-outlet></router-outlet>
     </div>
