--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,12 +6,14 @@
 
     <div class="flex items-center order-2 md:order-3 pl-0 md:pl-3">
     <div class="relative">
+        <a href="/notifications">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20" fill="currentColor">
         <path d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z" />
         </svg>
         <div class="absolute right-0 top-0 w-3 h-3 bg-zinc-900 rounded-full p-0.5">
         <div class="bg-red-500 w-full h-full rounded-full"></div>
         </div>
+        </a>
     </div>
     <img src="https://assets.codepen.io/3685267/nft-dashboard-pro-1.jpg" alt="user" class="w-10 h-10 rounded-full ml-4" />
     <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 ml-4" viewBox="0 0 20 20" fill="currentColor">
