--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
         </div>
         </a>
     </div>
-    <img src="https://assets.codepen.io/3685267/nft-dashboard-pro-1.jpg" alt="user" class="w-10 h-10 rounded-full ml-4" />
+    <img src="https://avatars.githubusercontent.com/u/70586674?s=96&v=4" alt="user" class="w-10 h-10 rounded-full ml-4" />
     <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 ml-4" viewBox="0 0 20 20" fill="currentColor">
         <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
     </svg>
@@ -27,13 +27,13 @@
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
         </svg>
     </button>
-    <form class="relative grow md:max-w-lg">
+<!--     <form class="relative grow md:max-w-lg">
         <input type="text" class="bg-zinc-700 pl-3 pr-10 h-10 rounded-md w-full" placeholder="search for collection" />
         <span class="absolute right-0 top-0 bottom-0 w-10 grid place-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
         </svg>
         </span>
-    </form>
+    </form> -->
     </div>
 </div>
