--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
       <div class="mt-2 text-xl font-semibold">{{ task.title }}</div>
       <div class="text-sm text-gray-500">{{ task.description }}</div>
       <div class="relative pt-1 mt-2">
-        <div class="overflow-hidden h-2 mb-4 text-xs flex rounded" [ngClass]="task.backgroundColor + '-200'">
+        <div class="overflow-hidden h-2 mb-4 text-xs flex rounded" [ngClass]="task.backgroundColor+'-200'">
           <div class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center"
                 [ngStyle]="{ 'width': task.progress + '%'  }"
                 [ngClass]="task.backgroundColor + '-600'"
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div class="flex space-x-2">
-          <img class="w-6 h-6 rounded-full" [src]="task.imageUrl" alt="User">
+          <img class="w-6 h-6 rounded-full" [src]="'https://via.placeholder.com/150'" alt="User">
           <button class="w-6 h-6 rounded-full text-white" [ngClass]="task.backgroundColor +'-600'">+</button>
       </div>
   </div>
