--- a/src/app/pipeline/pipeline.component.html
+++ b/src/app/pipeline/pipeline.component.html
@@ -1,10 +1,11 @@
-<div class="container mx-auto p-4 mb-5">
+<!-- <div class="container mx-auto p-4 mb-5">
   <h1 class="text-2xl font-bold mb-4">Pipelines</h1>
   <div class="grid grid-cols-2 gap-4">
     <div *ngFor="let step of steps" class="p-4 border rounded shadow bg-white">
       <h2 class="text-xl font-semibold">{{ step.name }}</h2>
       <p>Status: {{ step.status }}</p>
       <p>Last Run: {{ step.lastRun | date:'short' }}</p>
+      <p>command: {{ step.command }}</p>
       <div class="flex justify-end space-x-2 mt-2">
         <button 
           class="bg-blue-500 text-white rounded px-4 py-2"
@@ -42,9 +43,107 @@
       </button>
     </div>
   </div>
+</div> -->
+
+<div class="container mx-auto p-4 mb-5 relative">
+  <h1 class="text-2xl font-bold mb-4">Pipelines</h1>
+  <div class="grid grid-cols-2 gap-4">
+    <div *ngFor="let step of steps" class="p-4 border rounded shadow bg-white relative">
+      <button 
+        class="absolute top-2 right-2 bg-gray-300 text-gray-700 rounded-full px-3 py-1"
+        (click)="openModal(step)">
+        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+          <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M6 4v10m0 0a2 2 0 1 0 0 4m0-4a2 2 0 1 1 0 4m0 0v2m6-16v2m0 0a2 2 0 1 0 0 4m0-4a2 2 0 1 1 0 4m0 0v10m6-16v10m0 0a2 2 0 1 0 0 4m0-4a2 2 0 1 1 0 4m0 0v2"/>
+        </svg>        
+      </button>
+      <h2 class="text-xl font-semibold">{{ step.name }}</h2>
+      <p>Status: {{ step.status }}</p>
+      <p>Last Run: {{ step.lastRun | date:'short' }}</p>
+      <p>command: {{ step.command }}</p>
+      <div class="flex justify-end space-x-2 mt-2">
+        <button 
+          class="bg-blue-500 text-white rounded px-4 py-2"
+          (click)="selectPipeline(step)">
+          View Discussion
+        </button>
+        <button 
+          class="bg-green-500 text-white rounded px-4 py-2"
+          (click)="executeStep(step)">
+          To Execute
+        </button>
+      <!--   <button 
+          class="bg-gray-300 text-gray-700 rounded px-4 py-2"
+          (click)="openModal(step)">
+          Configurar
+        </button> -->
+      </div>
+      <div class="mt-2">
+        <div *ngIf="step.status === 'in-progress'" class="animate-pulse">
+          <div class="h-2 bg-blue-500 rounded"></div>
+        </div>
+        <div *ngIf="step.status === 'completed'" class="bg-green-500 h-2 rounded"></div>
+        <div *ngIf="step.status === 'pending'" class="bg-gray-300 h-2 rounded"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal de Flowbite -->
+  <div *ngIf="stepSettingsModalOpen" class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-50">
+    <div class="bg-white p-4 rounded shadow-lg w-1/2">
+      <h2 class="text-xl font-semibold mb-2">Configurar Step</h2>
+      <form>
+        <div class="mb-4">
+          <label for="stepName" class="block text-sm font-medium text-gray-700">Nombre del Step</label>
+          <input type="text" id="stepName" name="stepName" [(ngModel)]="stepOnConfig.name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+        </div>
+        <div class="mb-4">
+          <label for="stepCommand" class="block text-sm font-medium text-gray-700">Comando del Step</label>
+          <input type="text" id="stepCommand" name="stepCommand" [(ngModel)]="stepOnConfig.command" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+        </div>
+        <div class="flex justify-end">
+          <button 
+            type="button" 
+            class="bg-blue-500 text-white rounded px-4 py-2"
+            (click)="saveChanges()">
+            Guardar
+          </button>
+          <button 
+            type="button" 
+            class="bg-gray-300 text-gray-700 rounded px-4 py-2 ml-2"
+            (click)="closeModal()">
+            Cancelar
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<div *ngIf="selectedPipeline" class="mt-8">
+  <div class="flex justify-between">
+    <h2 class="text-xl font-semibold">Discussion for {{ selectedPipeline.name }}</h2>
+    <button 
+      class="bg-red-500 text-white rounded px-2 py-1"
+      (click)="closeDiscussion()">
+      ×
+    </button>
+  </div>
+  <div *ngFor="let comment of filteredComments" class="p-4 border rounded shadow mb-2 bg-gray-100">
+    <p><strong>{{ comment.user }}:</strong> {{ comment.message }}</p>
+    <small class="text-gray-500">{{ comment.timestamp | date:'short' }}</small>
+  </div>
+  <div class="mt-4">
+    <textarea [(ngModel)]="newComment" class="w-full p-2 border rounded" placeholder="Add a comment..."></textarea>
+    <button 
+      class="bg-blue-500 text-white rounded px-4 py-2 mt-2 float-right"
+      (click)="selectedPipeline ? addComment(selectedPipeline.id!) : null">
+      Add Comment
+    </button>
+  </div>
+
+  <hr class="h-px  my-8 bg-gray-200 border-0 dark:bg-gray-700">
 </div>
 
-<div class="container mx-auto p-4">
+<!-- 
   <h1 class="text-2xl font-bold mb-4">Console Executor</h1>
   <div class="mb-4">
     <input [(ngModel)]="command" placeholder="Enter command" class="w-full p-2 border border-gray-300 rounded" />
@@ -61,6 +160,36 @@
     <pre class="bg-gray-100 p-2 rounded">{{ output }}</pre>
   </div>
   <div class="mt-4">
+    <h2 class="text-xl font-semibold text-red-500">Error:</h2>
+    <pre class="bg-red-100 p-2 rounded">{{ error }}</pre>
+  </div>
+ -->
+
+<div class="container mx-auto p-4">
+  <h1 class="text-2xl font-bold mb-4">Console Executor</h1>
+  <div class="mb-4">
+    <input [(ngModel)]="command" placeholder="Enter command" class="w-full p-2 border border-gray-300 rounded" />
+  </div>
+  <div *ngIf="currentDirectory">
+    <h2 class="text-xl font-semibold">Current Directory:</h2>
+    <pre class="bg-gray-100 p-2 rounded">{{ currentDirectory }}</pre>
+  </div>
+  <div class="mt-4">
+    <button (click)="executeCommand()" class="px-4 py-2 bg-blue-500 text-white rounded">Execute</button>
+    <button (click)="selectDirectory()" class="px-4 py-2 ml-2 bg-gray-500 text-white rounded">Select Directory</button>
+      <div role="status" *ngIf="commandExecuting">
+      <svg aria-hidden="true" class="inline w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-pink-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
+          <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
+      </svg>
+      <span class="sr-only">Loading...</span>
+  </div>
+  </div>
+  <div>
+    <h2 class="text-xl font-semibold">Output:</h2>
+    <pre class="bg-gray-100 p-2 rounded">{{ output }}</pre>
+  </div>
+  <div class="mt-4" *ngIf="error">
     <h2 class="text-xl font-semibold text-red-500">Error:</h2>
     <pre class="bg-red-100 p-2 rounded">{{ error }}</pre>
   </div>
