--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -4,14 +4,16 @@
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
     <div *ngFor="let project of projects" class="bg-white bg p-4 rounded-lg shadow-md relative">
       <!-- Botón de configuración -->
-      <button (click)="openModal(project)" class="absolute top-2 right-2 text-gray-400 hover:text-gray-200">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M19 9a7 7 0 00-14 0v3m14 0v3m0 0H5m14 0a7 7 0 01-14 0m14 0H5m14 0V9m0 3H5m0-6H5M5 21h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v14a2 2 0 002 2z" />
+      <button (click)="openModal(project)" class="absolute top-2 right-2 text-gray-800 hover:text-gray-200">
+        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m14.304 4.844 2.852 2.852M7 7H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-4.5m2.409-9.91a2.017 2.017 0 0 1 0 2.853l-6.844 6.844L8 14l.713-3.565 6.844-6.844a2.015 2.015 0 0 1 2.852 0Z"/>
         </svg>
+        
       </button>
-
+      <button (click)="redirectToProjectTask(project.id!)" 
+      class="absolute text-sm bottom-2 right-2 bg-purple-500 hover:text-gray-200 p-1 rounded-md">
+        view tasks
+      </button>
       <!-- Contenido del proyecto -->
       <h2 class="text-xl font-semibold">{{ project.name }}</h2>
       <p>{{ project.description }}</p>
