"Added ChangeDetectorRef to BackupManagerComponent and ProjectsComponent, updated constructor and added detectChanges() calls; updated HeaderComponent HTML to use an image instead of a div."

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,10 @@
 <div class="flex flex-wrap p-3 items-center sticky top-0 bg-gradient-to-l from-violet-950 to-indigo-950  fit md:h-16 z-30">
     <div class="flex items-center grow md:grow-0 w-fit md:w-48">
-    <div class="w-10 h-10 bg-gradient-to-tr from-fuchsia-600 to-violet-600 grid place-items-center rounded-full font-bold text-white text-md">DO</div>
+    <!-- <div class="w-10 h-10 bg-gradient-to-tr from-fuchsia-600 to-violet-600 grid place-items-center rounded-full font-bold text-white text-md">DO</div>
+     -->
+    <img src="../../assets/DevOra.png" alt="user" class="w-10 h-10 rounded-full ml-4" />
     <div class="ml-2 font-bold text-xl text-white">DevORA</div>
+  
     </div>
 
     <div class="flex items-center order-2 md:order-3 pl-0 md:pl-3">
