Fixing steps, pls need to fix add steps
Oli

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -21,6 +21,10 @@
             [ngClass]="'bg-' + project.languageColor + ' text-white text-xs px-2 py-1 rounded-full mt-2 inline-block'">
         {{ project.language }}
       </span>
+        <!--<span *ngIf="project.language"
+            [ngClass]="'bg-gre + ' text-white text-xs px-2 py-1 rounded-full mt-2 inline-block'">
+        {{ project.language }}
+      </span> -->
     </div>
   </div>
 </div>
