--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,17 @@
 <div class=" mx-auto grid grid-cols-2 gap-2">
-  <div *ngFor="let task of tasks" [ngClass]="task.backgroundColor +'-100' +' rounded-lg p-4 shadow-md'">
+
+  <div *ngFor="let task of tasks" [ngClass]="'bg-white rounded-lg  shadow-md'">
+    <div [ngClass]="task.backgroundColor +'-500' +' bg-opacity-20 h-full w-full p-4' ">
       <div class="flex justify-between items-center">
           <div class="text-gray-600">{{ task.date }} | {{ task.daysLeft }} Days Left</div>
       </div>
       <div class="mt-2 text-xl font-semibold">{{ task.title }}</div>
-      <div class="text-sm text-gray-500">{{ task.description }}</div>
+      <div class="text-sm text-gray-500 ">{{ task.description }}</div>
       <div class="relative pt-1 mt-2">
         <div class="overflow-hidden h-2 mb-4 text-xs flex rounded" [ngClass]="task.backgroundColor+'-200'">
-          <div class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center"
+          <div class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center "
                 [ngStyle]="{ 'width': task.progress + '%'  }"
-                [ngClass]="task.backgroundColor + '-600'"
+                [ngClass]="task.backgroundColor + '-500'"
           ></div>
         </div>
       </div>
@@ -18,5 +20,65 @@
           <button class="w-6 h-6 rounded-full text-white" [ngClass]="task.backgroundColor +'-600'">+ </button>
           <button class=" right-1 w-auto px-1 h-6 rounded-full  bg-purple-300" (click)="redirectToTaskStep(task.id)" >View pipeline </button>
       </div>
+    </div>
+  </div>
+
+</div>
+
+
+<!-- Botón para abrir el modal -->
+<button class="my-4 bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700" (click)="openModal()">
+  + Add Task
+</button>
+
+<!-- Modal -->
+<div *ngIf="isModalOpen" class="fixed z-10 inset-0 overflow-y-auto">
+  <div class="flex items-center justify-center min-h-screen px-4">
+    <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"></div>
+    
+    <div class="bg-white rounded-lg overflow-hidden shadow-xl transform transition-all sm:max-w-lg sm:w-full">
+      <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+        <div class="sm:flex sm:items-start">
+          <div class="text-center sm:mt-0 sm:ml-4 sm:text-left">
+            <h3 class="text-lg leading-6 font-medium text-gray-900">
+              Add New Task
+            </h3>
+
+            <!-- Formulario para crear una nueva tarea -->
+            <div class="mt-2">
+              <div>
+                <label class="block text-gray-700">Title</label>
+                <input [(ngModel)]="newTask.title" type="text" class="mt-1 p-2 border rounded w-full" required>
+
+                <label class="block text-gray-700 mt-2">Date</label>
+                <input [(ngModel)]="newTask.date" type="date" class="mt-1 p-2 border rounded w-full" required>
+
+                <label class="block text-gray-700 mt-2">Days Left</label>
+                <input [(ngModel)]="newTask.daysLeft" type="number" class="mt-1 p-2 border rounded w-full" required>
+
+                <label class="block text-gray-700 mt-2">Description</label>
+                <input [(ngModel)]="newTask.description" type="text" class="mt-1 p-2 border rounded w-full">
+
+                <label class="block text-gray-700 mt-2">Progress</label>
+                <input [(ngModel)]="newTask.progress" type="number" class="mt-1 p-2 border rounded w-full">
+
+                <label class="block text-gray-700 mt-2">Background Color</label>
+                <input [(ngModel)]="newTask.backgroundColor" type="text" class="mt-1 p-2 border rounded w-full" required>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+        <button (click)="saveTask()" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-500 text-base font-medium text-white hover:bg-blue-700 sm:ml-3 sm:w-auto sm:text-sm">
+          Save Task
+        </button>
+        <button (click)="closeModal()" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+          Cancel
+        </button>
+      </div>
+    </div>
   </div>
 </div>
