--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,11 +25,11 @@
     </div>
 
     <div class="flex mt-4 md:mt-0 order-3 md:order-2 w-full grow md:w-fit">
-    <button class="w-10 h-10 rounded-md bg-zinc-700 grid place-items-center mr-2 block md:hidden">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
-    </button>
+        <button class="w-10 h-10 rounded-md bg-zinc-700 grid place-items-center mr-2 block md:hidden" (click)="toggleSidebar()">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+        </button>
 <!--     <form class="relative grow md:max-w-lg">
         <input type="text" class="bg-zinc-700 pl-3 pr-10 h-10 rounded-md w-full" placeholder="search for collection" />
         <span class="absolute right-0 top-0 bottom-0 w-10 grid place-items-center">
